--- a/sites/all/themes/clinicfinder/scss/base/_variables.scss
+++ b/sites/all/themes/clinicfinder/scss/base/_variables.scss
@@ -118,7 +118,9 @@ $breakpoints: (
 // ==========
 
 $colors: (
-
+   concrete: rgba(242, 242, 242, 1),
+   pacific-blue: rgba(4, 175, 191, 1),
+   sunset-orange: rgba(255, 82, 58, 1)
 );
 
 // ==========
