--- a/sites/all/themes/clinicfinder/scss/styles.scss
+++ b/sites/all/themes/clinicfinder/scss/styles.scss
@@ -37,6 +37,7 @@
 // ==========
 @import "modules/inputs";
 @import "modules/home";
+@import "modules/dropkick";
 
 // ==========
 // SHAME - For new style snippets that haven't been sorted and commented yet
