--- a/sites/all/themes/clinicfinder/css/styles.css
+++ b/sites/all/themes/clinicfinder/css/styles.css
@@ -539,7 +539,8 @@ input[type=password] {
   line-height: 1.5785em;
   width: auto;
   padding-left: 10px;
-  padding-right: 10px; }
+  padding-right: 10px;
+  border-radius: 10px; }
 
 textarea,
 textarea:hover,
@@ -552,7 +553,7 @@ textarea:focus {
 
 input[type=submit] {
   margin: 0;
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 3rem;
   background-color: #04afbf;
   border-radius: 10px;
   color: white;
@@ -603,5 +604,194 @@ input::-ms-clear {
 .front .form-item-field-geofield-distance-unit,
 .front .edit-field-geofield-distance-unit,
 .front .views-widget-filter-field_24_hours_value,
-.front .views-widget-filter-field_public_holidays_value {
+.front .views-widget-filter-field_public_holidays_value,
+.front label[for="edit-field-medical-scheme-tid"] {
+  display: none; }
+
+.dk-select,
+.dk-select *,
+.dk-select *:before,
+.dk-select *:after,
+.dk-select-multi,
+.dk-select-multi *,
+.dk-select-multi *:before,
+.dk-select-multi *:after {
+  box-sizing: border-box; }
+
+.dk-select,
+.dk-select-multi {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1.2em;
+  width: 200px;
+  cursor: pointer;
+  border-radius: 5px; }
+
+.dk-selected {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  position: relative;
+  color: #333;
+  background-color: white;
+  border: 3px solid #f2f2f2;
+  border-radius: 10px;
+  padding: 0.7em 2.6em 0.7em 1em;
+  text-overflow: ellipsis;
+  text-shadow: #fff 1px 1px 0;
+  -webkit-transition: border-color .5s;
+          transition: border-color .5s; }
+
+.dk-selected:after {
+  content: '';
+  position: absolute;
+  top: 45%;
+  right: 1em;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #4b4b4b; }
+
+.dk-selected-disabled {
+  color: #bbbbbb; }
+
+.dk-select .dk-select-options {
+  position: absolute;
+  display: none;
+  left: 0; }
+
+.dk-select-open-up .dk-select-options {
+  border-radius: 0.4em 0.4em 0 0;
+  margin-bottom: -1px;
+  bottom: 100%; }
+
+.dk-select-open-down .dk-select-options {
+  border-radius: 0 0 0.4em 0.4em;
+  margin-top: -1px;
+  top: 100%; }
+
+.dk-select-multi .dk-select-options {
+  max-height: 10em; }
+
+.dk-select-options {
+  width: 100%;
+  z-index: 100;
+  background: #fefefe;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 8px;
+  border-radius: 0 0 5px 5px;
+  border: 1px solid #cccccc;
+  border-radius: 0.4em;
+  overflow-x: hidden;
+  overflow-y: auto;
+  max-height: 10.5em;
+  list-style: none;
+  padding: 0 !important;
+  margin: 0; }
+
+.dk-option {
+  background-color: #fff;
+  border-bottom: 1px solid #999;
+  font-weight: bold;
+  padding: 8px 10px;
+  margin: 0; }
+
+.dk-option-selected {
+  background-color: #04afbf;
+  color: #fff; }
+
+.dk-select-options-highlight .dk-option-selected {
+  background-color: transparent;
+  color: inherit; }
+
+.dk-select-options .dk-option-highlight {
+  background-color: #04afbf;
+  color: #fff; }
+
+.dk-select-options .dk-option-disabled {
+  color: #bbbbbb;
+  background-color: transparent; }
+
+.dk-optgroup {
+  border: solid #cccccc;
+  border-width: 1px 0;
+  padding: 0.25em 0;
+  margin-top: 0.25em; }
+
+.dk-optgroup + .dk-option {
+  margin-top: 0.25em; }
+
+.dk-optgroup + .dk-optgroup {
+  border-top-width: 0;
+  margin-top: 0; }
+
+.dk-optgroup:nth-child(2) {
+  padding-top: 0;
+  border-top: none;
+  margin-top: 0; }
+
+.dk-optgroup:last-child {
+  border-bottom-width: 0;
+  margin-bottom: 0;
+  padding-bottom: 0; }
+
+.dk-optgroup-label {
+  padding: 0 0.5em 0.25em;
+  font-weight: bold;
+  width: 100%; }
+
+.dk-optgroup-options {
+  list-style: none;
+  padding-left: 0; }
+
+.dk-optgroup-options li {
+  padding-left: 1.2em; }
+
+.dk-select-open-up .dk-selected {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  box-shadow: 0 0 5px #40b5e2;
+  background-color: #ececec;
+  border-color: #8c8c8c;
+  color: #ccc;
+  box-shadow: inset 0 -2px 5px #ccc; }
+
+.dk-select-open-down .dk-selected {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  box-shadow: 0 0 5px #40b5e2;
+  box-shadow: inset 0 -2px 5px #ccc; }
+
+.dk-select-open-up .dk-select-options,
+.dk-select-open-down .dk-select-options,
+.dk-select-multi:focus .dk-select-options {
+  display: block;
+  border-color: #3297fd; }
+
+.dk-select-multi:hover,
+.dk-select-multi:focus {
+  outline: none; }
+
+.dk-selected:hover,
+.dk-selected:focus {
+  outline: none;
+  border-color: #d8d8d8; }
+
+.dk-select-disabled {
+  opacity: 0.6;
+  color: #bbbbbb;
+  cursor: not-allowed; }
+
+.dk-select-disabled .dk-selected:hover,
+.dk-select-disabled .dk-selected:focus {
+  border-color: inherit; }
+
+.dk-select-disabled .dk-selected:hover:before,
+.dk-select-disabled .dk-selected:focus:before {
+  border-top-color: inherit; }
+
+.dk-select-disabled .dk-selected:hover:after,
+.dk-select-disabled .dk-selected:focus:after {
+  border-left-color: inherit; }
+
+select[data-dkcacheid] {
   display: none; }
