--- a/sites/all/themes/clinicfinder/scss/modules/_inputs.scss
+++ b/sites/all/themes/clinicfinder/scss/modules/_inputs.scss
@@ -8,7 +8,8 @@ input[type=password] {
   line-height: 1.5785em; 
   width: auto; 
   padding-left: 10px; 
-  padding-right: 10px; 
+  padding-right: 10px;
+  border-radius: 10px;
 }
 
 textarea,
@@ -23,7 +24,7 @@ textarea:focus {
 
 input[type=submit] {
   margin: 0;
-  padding: rhythm(0.5) rhythm(1);
+  padding: rhythm(0.5) rhythm(2);
   background-color: color(pacific-blue);
   border-radius: 10px;
   color: white;
