--- a/sites/all/themes/clinicfinder/scss/styles.scss
+++ b/sites/all/themes/clinicfinder/scss/styles.scss
@@ -38,6 +38,7 @@
 @import "modules/inputs";
 @import "modules/home";
 @import "modules/dropkick";
+@import "modules/listing";
 
 // ==========
 // SHAME - For new style snippets that haven't been sorted and commented yet
