--- a/sites/all/themes/clinicfinder/css/styles.css
+++ b/sites/all/themes/clinicfinder/css/styles.css
@@ -839,7 +839,8 @@ select[data-dkcacheid] {
     width: 320px;
     height: 100vh;
     overflow-y: scroll;
-    position: absolute; }
+    position: absolute;
+    padding: 0 0.75rem; }
   .view-display-id-clinics > .item-list {
     width: 300px;
     position: absolute;
@@ -850,12 +851,106 @@ select[data-dkcacheid] {
   .view-display-id-clinics .attachment {
     width: calc(100% - 320px);
     float: right; }
+  .view-display-id-clinics .views-row {
+    border-bottom: 1px dashed gray;
+    padding-bottom: 0.75rem;
+    margin-bottom: 0.75rem; }
+    .view-display-id-clinics .views-row:after {
+      content: "";
+      display: table;
+      clear: both; }
+    .view-display-id-clinics .views-row .field {
+      margin-bottom: 0.375rem; }
+  .view-display-id-clinics .field-name-field-medical-scheme .field-label {
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+    height: 32px;
+    width: 32px;
+    display: inline-block;
+    background-image: url("../img/medicalscheme.png");
+    background-size: cover;
+    margin-right: 5px; }
+  .view-display-id-clinics .field-name-field-medical-scheme .field-item {
+    display: inline-block;
+    border: 1px solid gray;
+    padding: 1px;
+    margin-right: 7px;
+    margin-bottom: 7px;
+    padding: 0 3px;
+    color: gray;
+    font-size: 12px; }
+  .view-display-id-clinics .field-name-field-medical-scheme .field-items {
+    float: none; }
+  .view-display-id-clinics .field-name-field-24-hours {
+    float: left;
+    margin-right: 5px; }
+    .view-display-id-clinics .field-name-field-24-hours .field-label {
+      overflow: hidden;
+      text-indent: 100%;
+      white-space: nowrap;
+      height: 18px;
+      width: 24px;
+      display: inline-block;
+      background-image: url("../img/check.png");
+      background-size: cover;
+      margin-right: 5px; }
+  .view-display-id-clinics .field-name-field-public-holidays {
+    float: left; }
+    .view-display-id-clinics .field-name-field-public-holidays .field-label {
+      overflow: hidden;
+      text-indent: 100%;
+      white-space: nowrap;
+      height: 18px;
+      width: 24px;
+      display: inline-block;
+      background-image: url("../img/check.png");
+      background-size: cover;
+      margin-right: 5px; }
+  .view-display-id-clinics .field-name-field-operating-hours {
+    clear: both; }
 
-#ip-geoloc-map-of-view-clincs-clinic_map-7843f2d4b36a59915f1e8af69b80be71 {
-  height: 100vh !important; }
+.is-false {
+  display: none; }
+
+.bus-number {
+  display: inline-block; }
+  .bus-number:after {
+    content: '';
+    margin-right: 7px; }
+
+.addressfield-container-inline {
+  margin-bottom: 0.375rem; }
+
+.country {
+  display: none; }
+
+#toggle {
+  float: left;
+  margin-top: 0.75rem;
+  cursor: pointer;
+  font-weight: bold;
+  color: #04afbf; }
+  #toggle:hover {
+    color: #03818d; }
+
+.distance {
+  float: right;
+  color: #ff523a;
+  font-weight: bold; }
+
+.oh-current-closed {
+  color: red; }
+
+.oh-current-open {
+  color: green; }
+
+select#edit-field-geofield-distance-unit {
+  display: none; }
+
+.geofield-proximity-origin-from:before {
+  content: 'kilometre(s)';
+  margin-right: 7px; }
 
 input#edit-field-geofield-distance-distance {
   width: 50px; }
-
-.leaflet-popup .addressfield-container-inline {
-  display: none; }
