--- a/sites/all/themes/clinicfinder/scss/modules/_dropkick.scss
+++ b/sites/all/themes/clinicfinder/scss/modules/_dropkick.scss
@@ -90,7 +90,7 @@
 .dk-option {
   background-color: #fff;
   border-bottom: 1px solid #999;
-  font-weight: bold;
+  font-weight: normal;
   padding: 8px 10px;
   margin: 0;
 }
