--- a/sites/all/themes/clinicfinder/scss/styles.scss
+++ b/sites/all/themes/clinicfinder/scss/styles.scss
@@ -39,6 +39,9 @@
 @import "modules/home";
 @import "modules/dropkick";
 @import "modules/listing";
+@import "modules/footer";
+@import "modules/sitewide";
+@import "modules/header";
 
 // ==========
 // SHAME - For new style snippets that haven't been sorted and commented yet
